[package]
name = "ansi-interpreter"
version = "0.1.0"
authors = ["Daniel Keep <daniel.keep@gmail.com>"]

[dependencies]
conv = "0.3.0"
num = "0.1.27"
smallvec = "0.1.5"

[target.i686-pc-windows-gnu.dependencies]
kernel32-sys = "0.2.1"
winapi = "0.2.5"
wio = "0.1.0"

[dev-dependencies]
itertools = "0.4.5"
